--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Takemoto's portfolio site</title>
+  <link rel="stylesheet" href="css/stylesheet.css">
+  <title>Takemoto's portfolio</title>
 </head>
 <body>
-  テスト
+  <div class="header">
+    <div class="header-name">Takemoto Shinnosuke</div>
+    <div class="header-list">
+      <ul>
+        自己紹介
+      </ul>
+      <ul>
+        作ったもの
+      </ul>
+    </div>
+  </div>
+  <div class="main">
+
+  </div>
+  <div class="footer">
+
+  </div>
+  <h1></h1>
 </body>
 </html>
